# qristal-integrations

./: .gitlab-ci.yml  CHANGELOG.md  README.md
ci/: README.md
doc/: README.md
docker/: README.md
docker/beta_release/: Dockerfile  README.md  entry-qb-all.sh
docker/beta_release/qbsdk/: Dockerfile
docker/beta_release/qbsdk_cudaq/: Dockerfile
docker/qristal/: Dockerfile  README.md
docker/qristal_emulator/: Dockerfile  README.md
jupyterlab/: README.md
nextflow/: README.md
nextflow/introduction/: CMakeLists.txt  README.md  main.nf  nextflow.config  run.py
nextflow/introduction/vqe/: CMakeLists.txt.in  OptVQEParallelization.cpp
nextflow/q_chemistry/: README.md  external_potential.py  main.nf  nextflow.config  qm_mm.py  vqe_interface.py
qiskit_integration/: circuit_example.py  qaoa_example.py  qristal_primitives.py  vqe_example.py
tests/: README.md
tests/nextflow/introduction/: 2-hydrogen.geo  main.nf  nextflow.config  run.py
tests/nextflow/q_chemistry/: qmmm_test.py
tests/qiskit_integration/: qiskit_test.py
theia/: README.md
theia/second-extension/: README.md  package.json
theia/second-extension/browser-app/: package.json
theia/second-extension/browser-app/resources/: preload.html
theia/second-extension/electron-app/: package.json
theia/second-extension/qb-doc/: package.json  tsconfig.json
theia/second-extension/w22w/: README.md  package.json
vqpu-qasm/: README.md  qasm_example.py  qbqpu.py
vqpu-qiskit/: README.md  ghz_qbbackend.py  qbbackend.py
vscode/: README.md
vscode/.devcontainer/: Dockerfile  devcontainer.json
(+7 files in other folders)
